# python-project-52

./: .gitignore  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml  requirements.txt
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels.py
task_manager/templates/: base.html  index.html
task_manager/templates/base/: delete.html  form copy.html  list.html
task_manager/templates/labels/: create.html  delete.html  list.html  table_row.html  update.html
task_manager/templates/registration/: login.html  logout.html
task_manager/templates/statuses/: create.html  delete.html  list.html  table_row.html  update.html
task_manager/templates/tasks/: create.html  delete.html  detail_view.html  list.html  table_row.html  update_.html
task_manager/templates/users/: create.html  delete.html  list.html  table_row.html  update.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
